@@ -30,11 +30,6 @@ void StatisticInInclusiveRange::format_to_stream( std::ostream& oStream ) const 
 	 	<< m_lower_bound
 		<< ","
 		<< m_upper_bound
-/*
-	 	<< std::fixed << std::setprecision( 5 ) << m_lower_bound
-		<< ","
-		<< std::fixed << std::setprecision( 5 ) << m_upper_bound
-*/
 		<< "]" ;
 }
 
@@ -58,9 +53,9 @@ void StatisticInExclusiveRange::format_to_stream( std::ostream& oStream ) const 
 	oStream
 		<< m_statistic_name
 		<< " in ("
-	 	<< std::fixed << std::setprecision( 5 ) << m_lower_bound
+	 	<< m_lower_bound
 		<< ","
-		<< std::fixed << std::setprecision( 5 ) << m_upper_bound
+		<< m_upper_bound
 		<< ")" ;
 }
 
@@ -82,7 +77,7 @@ void StatisticGreaterThan::format_to_stream( std::ostream& oStream ) const {
 	oStream
 		<< m_statistic_name
 		<< " > "
-		<< std::fixed << std::setprecision( 5 ) << m_lower_bound ;
+		<< m_lower_bound ;
 }
 
 StatisticLessThan::StatisticLessThan( std::string const& statistic_name, double upper_bound, double epsilon )
@@ -103,6 +98,6 @@ void StatisticLessThan::format_to_stream( std::ostream& oStream ) const {
 	oStream
 		<< m_statistic_name
 		<< " < "
-		<< std::fixed << std::setprecision( 5 ) << m_upper_bound ;
+		<< m_upper_bound ;
 }
 
